client/main.css
/* Global HTML Defaults */
@font-face {
  font-family: 'Lato';
  src: url('fonts/Lato-Light.woff');
}
html { 
  background: url("images/bg.jpg") no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
body {
  font:35px/1.5 'Lato';
  color:#777;
  font-weight:300;
  height:100%;
  overflow:hidden;
  width: 100%;
  margin: 0;
}
h5 {
  margin-top:0.3%;
  margin-bottom:0.3%;
  color:#777;
  font-weight:10;
  padding-top:3%;
  text-align: center;
}
h6 {
  margin:0;
  padding:0% 10% 0% 0%;
  padding-left:3.6%;
}
/* End */

/* Center Boxes -- All HTML Files */
.initial {
  margin-top:24.5%;
  max-width:600px;
}
.main-center, .main-center-admin, .initial {
  background-color: #F7F7FF;
  border-radius:15px;
  margin-left:auto;
  margin-right:auto;
  margin-bottom:0;

  height:auto;
  box-shadow: 0px 5px 10px #222222;
}
.main-center, .main-center-admin {
  max-height:700px;
  margin-top:4%;
}
.main-center {
  max-width:825px;
}
.main-center-admin {
  max-width:900px;
}
/* End */ 

/* Chromebook Content */
.chromebooks, .chckChromebooks, .tchChromebooks {
  overflow: auto;
  padding-top:.5%;
  padding-bottom:.5%;
}
.row, .row-admin {
  height: 10%;
  display: flex;
}
/* End */

